@@ -8,6 +8,11 @@ Changelog
 4.0rc1 - Unreleased
 -------------------
 
+- Fix broken userid/login name in the password reset code. Fixes
+  http://dev.plone.org/plone/ticket/10768
+  [wichert]
+
+
 4.0b5 - 2010-07-07
 ------------------
 
